--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "version": "2.0.0",
   "private": false,
+  "proxy": "https://backend.baohule.com",
   "dependencies": {
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.8.1",
+    "@figuro/chatwoot-sdk": "^1.1.14",
     "@mui/icons-material": "5.8.2",
     "@mui/lab": "5.0.0-alpha.84",
     "@mui/material": "5.8.2",
@@ -15,6 +17,7 @@
     "clsx": "1.1.1",
     "date-fns": "2.28.0",
     "history": "5.3.0",
+    "material-ui-confirm": "^3.0.9",
     "nprogress": "0.2.0",
     "numeral": "2.0.6",
     "prop-types": "15.8.1",
@@ -23,14 +26,18 @@
     "react-custom-scrollbars-2": "4.4.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-helmet-async": "1.3.0",
     "react-notifications": "^1.7.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "6.3.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
+    "react-swipeable-views": "^0.14.0",
     "stylis": "4.1.1",
     "stylis-plugin-rtl": "2.1.1",
     "typescript": "4.7.3",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "2.1.4"
   },
   "scripts": {
